416Boolean indexing
Python 2.7.3 |EPD_free 7.3-2 (32-bit)| (default, Apr 12 2012, 14:30:37) [MSC v.1500 32 bit (Intel)] on win32
Type "copyright", "credits" or "license()" for more information.
>>> name=np.array(['Bob', 'Joe', 'Will', 'Bob', 'Will', 'Joe', 'Joe'])

Traceback (most recent call last):
  File "<pyshell#0>", line 1, in <module>
    name=np.array(['Bob', 'Joe', 'Will', 'Bob', 'Will', 'Joe', 'Joe'])
NameError: name 'np' is not defined
>>> from numpy.random import randn
>>> import numpy as np
>>> np.set_printoptions(precision=4, suppress=True)
>>> names = np.array(['Bob', 'Joe', 'Will', 'Bob', 'Will', 'Joe', 'Joe'])
>>> data=randn(7,4)
>>> names
array(['Bob', 'Joe', 'Will', 'Bob', 'Will', 'Joe', 'Joe'], 
      dtype='|S4')
>>> data
array([[ 0.1339, -0.1249,  0.6803, -1.0057],
       [ 0.5383, -1.8782,  1.533 , -0.6093],
       [ 0.1317, -1.7537,  0.3625,  0.2244],
       [ 1.2589, -0.6729,  1.2163,  0.4186],
       [ 1.5569,  0.3228,  1.3431, -1.4368],
       [ 0.6741,  0.346 ,  0.8585, -0.4487],
       [ 0.153 ,  0.9964,  1.9723, -0.0498]])
>>> names==Bob

Traceback (most recent call last):
  File "<pyshell#8>", line 1, in <module>
    names==Bob
NameError: name 'Bob' is not defined
>>> names=="Bob'
SyntaxError: EOL while scanning string literal
>>> names=='Bob'
array([ True, False, False,  True, False, False, False], dtype=bool)
>>> data[names=='Bob']
array([[ 0.1339, -0.1249,  0.6803, -1.0057],
       [ 1.2589, -0.6729,  1.2163,  0.4186]])
>>> data[names=='Bob',2:]
array([[ 0.6803, -1.0057],
       [ 1.2163,  0.4186]])
>>> data[names=='Bob',3]
array([-1.0057,  0.4186])
>>> names!='Bob'
array([False,  True,  True, False,  True,  True,  True], dtype=bool)
>>> data[-(names=='Bob')]
array([[ 0.5383, -1.8782,  1.533 , -0.6093],
       [ 0.1317, -1.7537,  0.3625,  0.2244],
       [ 1.5569,  0.3228,  1.3431, -1.4368],
       [ 0.6741,  0.346 ,  0.8585, -0.4487],
       [ 0.153 ,  0.9964,  1.9723, -0.0498]])
>>> mask=(names='Bob'|(names=='Will')
      
SyntaxError: invalid syntax
>>>  mask=(names=='Bob'|(names=='Will')
       
  File "<pyshell#17>", line 1
    mask=(names=='Bob'|(names=='Will')
   ^
IndentationError: unexpected indent
>>> mask=(names=='Bob')|(names=='Will')
>>> mask
array([ True, False,  True,  True,  True, False, False], dtype=bool)
>>> data[mask]
array([[ 0.1339, -0.1249,  0.6803, -1.0057],
       [ 0.1317, -1.7537,  0.3625,  0.2244],
       [ 1.2589, -0.6729,  1.2163,  0.4186],
       [ 1.5569,  0.3228,  1.3431, -1.4368]])
>>> data[data<0]=0
>>> data
array([[ 0.1339,  0.    ,  0.6803,  0.    ],
       [ 0.5383,  0.    ,  1.533 ,  0.    ],
       [ 0.1317,  0.    ,  0.3625,  0.2244],
       [ 1.2589,  0.    ,  1.2163,  0.4186],
       [ 1.5569,  0.3228,  1.3431,  0.    ],
       [ 0.6741,  0.346 ,  0.8585,  0.    ],
       [ 0.153 ,  0.9964,  1.9723,  0.    ]])
>>> data[names!='Joe']=7
>>> data
array([[ 7.    ,  7.    ,  7.    ,  7.    ],
       [ 0.5383,  0.    ,  1.533 ,  0.    ],
       [ 7.    ,  7.    ,  7.    ,  7.    ],
       [ 7.    ,  7.    ,  7.    ,  7.    ],
       [ 7.    ,  7.    ,  7.    ,  7.    ],
       [ 0.6741,  0.346 ,  0.8585,  0.    ],
       [ 0.153 ,  0.9964,  1.9723,  0.    ]])
>>> 
